--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@ hr {
     <a href="https://www.facebook.com/Kokos-Produkcija-110477254195024/"><img src="img/logo2.jpg" width="64" height="50"></img></a>
   </div>
   <div class="middle">
+     <svg width="200" height="200"
+  xmlns="http://www.w3.org/2000/svg">
+  <a href="https://www.facebook.com/Kokos-Produkcija-110477254195024">
+  <image href="img/fb_black.svg" height="200" width="200"/>
+
+    </a>
     <h1>COMING SOON</h1>
     <hr>
     <p id="demo" style="font-size:30px"></p>
